syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.model.bo.user";
option java_multiple_files = true;
option swift_prefix = "";

import "constant/user_status.proto";
import "constant/device_type.proto";

message UserSessionId {
    int64 user_id = 1;
    DeviceType device_type = 2;
}
